force-app/main/default/objects/Work_Assignment_Staging_Object__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose</description>
    <inlineHelpText>Purpose</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Media Request</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Excel File Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>