force-app/main/default/objects/Work_Assignment_Staging_Object__c/fields/Sub_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sub_Purpose__c</fullName>
    <description>Sub-Purpose</description>
    <inlineHelpText>Sub-Purpose</inlineHelpText>
    <label>Sub-Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Media Request Sub-Purpose 1</fullName>
            </value>
            <value>
                <fullName>Media Request Sub-Purpose 2</fullName>
            </value>
            <value>
                <fullName>Complaint Sub-Purpose 1</fullName>
            </value>
            <value>
                <fullName>Complaint Sub-Purpose 2</fullName>
            </value>
            <value>
                <fullName>Invalid Submission</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Approved Sub-Purpose 2</fullName>
            </value>
            <value>
                <fullName>Ministry (provincial governing body, etc.)</fullName>
            </value>
            <value>
                <fullName>Better Business Bureau</fullName>
            </value>
            <value>
                <fullName>Credit Bureau (Equifax or TU sending us requests)</fullName>
            </value>
            <value>
                <fullName>Letter from lawyer / law firm / paralegal</fullName>
            </value>
            <value>
                <fullName>Verbal (from consumer, not any of the above)</fullName>
            </value>
            <value>
                <fullName>Written (from consumer, not any of the above)</fullName>
            </value>
            <value>
                <fullName>Media Request</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Product Payment Upload File</fullName>
            </value>
            <value>
                <fullName>Account Status Update File</fullName>
            </value>
            <value>
                <fullName>Account Status (having Judgment) Update File</fullName>
            </value>
            <value>
                <fullName>Customer Contact Information Update File</fullName>
            </value>
            <value>
                <fullName>Product Allocation File</fullName>
            </value>
            <value>
                <fullName>Product Recall File</fullName>
            </value>
            <value>
                <fullName>Product Bulk Pool Update File</fullName>
            </value>
            <value>
                <fullName>General Inquiries</fullName>
            </value>
            <value>
                <fullName>Distressed Notes Bulk Upload File</fullName>
            </value>
            <value>
                <fullName>Direct Payment Upload File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>