force-app/main/default/objects/Work_Assignment_Staging_Object__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Title</inlineHelpText>
    <label>Title</label>
    <length>250</length>
    <type>Text</type>
</CustomField>